--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -9,7 +9,7 @@ Group=__APP__
 Restart=always
 Type=simple
 WorkingDirectory=__FINALPATH__
-ExecStart=/usr/local/bin/pipenv run python3 __FINALPATH__/.venv/bin/libretranslate --host 127.0.0.1 --port __PORT__
+ExecStart=/usr/local/bin/pipenv run python3 __FINALPATH__/.venv/bin/libretranslate --host 127.0.0.1 --port __PORT__ --load-only en,fr --frontend-language-target en
 
 [Install]
 WantedBy=multi-user.target
