--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "en": "Open Source Machine Translation API, entirely self-hosted",
         "fr": "API de traduction automatique Open Source, entièrement auto-hébergée"
     },
-    "version": "1.3.0~ynh1",
+    "version": "1.3.10~ynh1",
     "url": "https://libretranslate.com/",
     "upstream": {
         "license": "AGPL-3.0",
@@ -17,8 +17,8 @@
     },
     "license": "AGPL-3.0",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com"
+        "name": "",
+        "email": ""
     },
     "requirements": {
         "yunohost": ">= 11.0.9"
