--- a/conf/.env
+++ b/conf/.env
@@ -1,5 +1,36 @@
 HOST=127.0.0.1
 PORT=__PORT__
 
-LOAD_ONLY=en,fr
-FRONTEND_LANGUAGE_TARGET=en
+# Serveur
+PORT=5000
+HOST=0.0.0.0
+
+# Base de données (utilisée si vous activez DATABASE_URL)
+# Pour SQLite (par défaut, pas besoin de la variable)
+# DATABASE_URL=sqlite:///./libretranslate.db
+# Pour PostgreSQL (exemple) :
+# DATABASE_URL=postgresql://user:password@db:5432/libretranslate
+
+DISABLE_WEB_UI=false
+DISABLE_USAGE_STATS=false
+DISABLE_TRANSLATOR=false
+DISABLE_LANGUAGE_DETECTOR=false
+
+REQUIRE_API_KEY=false
+#API_KEYS=yourapikey1,yourapikey2  # clés API séparées par des virgules
+
+LANGUAGES=__USED_LANGUAGES__
+
+# e.g., fr->en->target if fr->target direct model doesn't exist
+# ENABLE_FALLBACK=false
+
+# Custom models
+# MODELS_PATH=/app/models
+
+# Logging
+LOG_LEVEL=INFO                 # DEBUG, INFO, WARNING, ERROR, CRITICAL
+
+ARGOS_DEVICE=__CUDA__
+
+# CORS
+# CORS_ALLOWED_ORIGINS=
