--- a/conf/.env
+++ b/conf/.env
@@ -1,14 +1,9 @@
 HOST=127.0.0.1
 PORT=__PORT__
 
-# Serveur
-PORT=5000
-HOST=0.0.0.0
-
-# Base de données (utilisée si vous activez DATABASE_URL)
-# Pour SQLite (par défaut, pas besoin de la variable)
+# SQLite (default)
 # DATABASE_URL=sqlite:///./libretranslate.db
-# Pour PostgreSQL (exemple) :
+# PostgreSQL :
 # DATABASE_URL=postgresql://user:password@db:5432/libretranslate
 
 DISABLE_WEB_UI=false
