--- a/conf/.env
+++ b/conf/.env
@@ -14,7 +14,7 @@ DISABLE_LANGUAGE_DETECTOR=false
 REQUIRE_API_KEY=false
 #API_KEYS=yourapikey1,yourapikey2  # clés API séparées par des virgules
 
-LT_LOAD_ONLY=__USED_LANGUAGES__
+#LT_LOAD_ONLY=__USED_LANGUAGES__
 
 # e.g., fr->en->target if fr->target direct model doesn't exist
 # ENABLE_FALLBACK=false
