--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -14,7 +14,7 @@ Restart=always
 Type=simple
 WorkingDirectory=__INSTALL_DIR__
 EnvironmentFile=__INSTALL_DIR__/.env
-ExecStart=__INSTALL_DIR__/venv/bin/gunicorn wsgi:app --workers 3 --bind ${HOST}:${PORT} -m 007
+ExecStart=__INSTALL_DIR__/venv/bin/libretranslate --load-only __USED_LANGUAGES__
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
