--- a/conf/.env
+++ b/conf/.env
@@ -26,6 +26,7 @@ LT_LOAD_ONLY=__USED_LANGUAGES__
 LOG_LEVEL=INFO                 # DEBUG, INFO, WARNING, ERROR, CRITICAL
 
 ARGOS_DEVICE=__CUDA__
+ARGOS_PACKAGES_DIR=__DATA_DIR__/models
 
 # CORS
 # CORS_ALLOWED_ORIGINS=
