fix env variables

--- a/conf/.env
+++ b/conf/.env
@@ -1,32 +1,47 @@
-HOST=127.0.0.1
-PORT=__PORT__
+#Env variables known thanks to https://deepwiki.com/LibreTranslate/LibreTranslate/3.3-configuration-options
 
-# SQLite (default)
-# DATABASE_URL=sqlite:///./libretranslate.db
-# PostgreSQL :
-# DATABASE_URL=postgresql://user:password@db:5432/libretranslate
+LT_HOST=127.0.0.1
+LT_PORT=__PORT__
+LT_URL_PREFIX=__PATH__
 
-DISABLE_WEB_UI=false
-DISABLE_USAGE_STATS=false
-DISABLE_TRANSLATOR=false
-DISABLE_LANGUAGE_DETECTOR=false
+LT_API_KEYS=true
+LT_REQUIRE_API_KEY_SECRET=false
 
-REQUIRE_API_KEY=false
-#API_KEYS=yourapikey1,yourapikey2  # clés API séparées par des virgules
+LT_SUGGESTIONS=false
+LT_DISABLE_FILES_TRANSLATION=false
+LT_DISABLE_WEB_UI=false
+LT_UPDATE_MODELS=true
+LT_FORCE_UPDATE_MODELS=false
+LT_METRICS=false
+LT_SECONDARY=false
+LT_THREADS=4
+
+# -1 = no limit
+LT_CHAR_LIMIT=-1
+LT_REQ_LIMIT=-1
+LT_HOURLY_REQ_LIMIT=-1
+LT_DAILY_REQ_LIMIT=-1
+LT_REQ_FLOOD_THRESHOLD=-1
+LT_REQ_TIME_COST=-1
+LT_BATCH_LIMIT=-1
+LT_ALTERNATIVES_LIMIT=-1
+
+#LT_REQ_LIMIT_STORAGE=memory://
+#LT_SHARED_STORAGE=memory://
+LT_API_KEYS_DB_PATH=__INSTALL_DIR__/db/api_keys.db
+#LT_API_KEYS_REMOTE=
+#LT_METRICS_AUTH_TOKEN=
+
+LT_FRONTEND_LANGUAGE_SOURCE=auto
+LT_FRONTEND_LANGUAGE_TARGET=locale
+LT_FRONTEND_TIMEOUT=500
+#LT_GA_ID=
+#LT_GET_API_KEY_LINK=
+#LT_REQUIRE_API_KEY_ORIGIN=
 
 LT_LOAD_ONLY=__USED_LANGUAGES__
 
-# e.g., fr->en->target if fr->target direct model doesn't exist
-# ENABLE_FALLBACK=false
-
-# Custom models
-# MODELS_PATH=/app/models
-
-# Logging
-LOG_LEVEL=INFO                 # DEBUG, INFO, WARNING, ERROR, CRITICAL
-
 ARGOS_DEVICE=__CUDA__
 ARGOS_PACKAGES_DIR=__DATA_DIR__/models
+ARGOS_DEBUG=0
 
-# CORS
-# CORS_ALLOWED_ORIGINS=
