Build from source + config_panel (#42)
* try building from sources

* in_subdir = true

* fix missing     [resources.sources.main]

* fix old flags in service

* fix service

* fix variable

* fix service

* oopsie

* add .env and limit used languages for test

* fix format

* fix

* Update .env

* try

* update tests

* propose gpu or cpu installs

* Update install

* fix torch version

* add config_panel

* fix

* update models during install/upgrade

* fixi

* fix command

* fix

* Update install

* Update upgrade

* Update upgrade

* Update config_panel.toml

* try

* try

* Update systemd.service

* Update .env

* Update systemd.service

* Update systemd.service

* Update config_panel.toml

* Update .env

* Update manifest.toml

* fix env variables

* remove unneeded files

* try to enable installation on path

* fix change_url in __PATH__

* fix unbound variable

* Update change_url

* don’t remove scripts dir

* fix locales?

* fix locales ?

* fix locale?

* Complete config_panel

* ynh_hide_warnings

* fix missing "

* fix config_panel

* fix

* fix

* fix bind web_ui

* string -> boolean

* add note

* fix

* move models location

* Auto-update READMEs

* fix ?

* fix ?

* Aaaaah mv file before full_replace

* let’s reinstall the models as it’s not a big deal anyway

* add pre_upgrade doc

* I think

* fixes

* fix variables

* addition to the docs

* try

* adapt resources needed

* fix models dir

* add tests

* don’t use old models as it causes issues

* more precise info

* subpath doesn’t work in fact

---------

Co-authored-by: yunohost-bot <yunohost@yunohost.org>

--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -10,11 +10,11 @@ Group=__APP__
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
 SyslogIdentifier=__APP__
-
 Restart=always
 Type=simple
 WorkingDirectory=__INSTALL_DIR__
-ExecStart=__INSTALL_DIR__/venv/bin/libretranslate --host 127.0.0.1 --port __PORT__ --load-only en,fr --frontend-language-target en
+EnvironmentFile=__INSTALL_DIR__/.env
+ExecStart=__INSTALL_DIR__/venv/bin/libretranslate
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these
