--- a/tests.toml
+++ b/tests.toml
@@ -2,4 +2,8 @@ test_format = 1.0
 
 [default]
 
+args.used_languages = "en,fr"
+args.cuda = "cpu"
+
 test_upgrade_from.ab1888f.name = "1.6.4"
+test_upgrade_from.53db9be.name = "1.7.2~ynh1"
